# dass-cloud-native

./: .env.example  README.md  docker-compose.local.yml  docker-compose.observability.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  integration-ci.yml
backend/: Dockerfile.worker  pyproject.toml
backend/alembic/versions/: 0002_job_runtime_spec.py  508a085e1e1f_add_job_type_and_fix_job_indices.py
backend/app/: cli.py
backend/app/api/v1/: jobs.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: job.py
backend/app/queue/: base.py  factory.py  memory.py  sqs.py
backend/app/repositories/: job_repository.py  task_repository.py
backend/app/schemas/: job.py
backend/app/services/: autoscaler_service.py  job_service.py  scheduler_service.py  vm_service.py  worker_service.py
backend/tests/: conftest.py  test_api.py  test_autoscaler.py  test_cron.py  test_execution_service.py  test_queue.py  test_repositories.py  test_scheduler.py  test_worker.py
backend/tests/integration/: conftest.py  test_integration.py  test_s4_integration.py  test_scheduler_election.py
docs/known-issues/: refresh-replica-lag.md
frontend/: .prettierrc  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: styles.css  types.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: dashboard-shell.tsx  loading-card.tsx  modal.tsx  status-pill.test.tsx  status-pill.tsx
frontend/src/hooks/: use-toast.tsx
frontend/src/utils/: env.ts
scripts/: e2e_smoke.py  load_gen.py  run_integration_tests.sh
(+26 files in other folders)
