[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dass"
version = "0.1.0"
description = "Distributed Asynchronous Scheduling System"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "psycopg[binary]>=3.1.19",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.4",
  "boto3>=1.34.131",
  "httpx>=0.27.0",
  "croniter>=2.0.5",
  "python-json-logger>=2.0.7",
  "docker>=7.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "asgi-lifespan>=2.1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: 整合測試 — 需要 Docker services (PostgreSQL + LocalStack)",
]
# 預設跑 unit test 時忽略 integration 目錄，避免本地缺 Docker 爆掉
# -v：列出每個 test 名稱與結果
# --durations=10：顯示最慢的 10 個 test，方便抓瓶頸
# -ra：在結尾彙整 failures/errors/skips 的原因
addopts = "--ignore=tests/integration -v --durations=10 -ra"

